fix(maps\leaflet): Leaflet maps controls overlapping on mobile version
Close#29

--- a/src/app/theme/components/baSidebar/baSidebar.scss
+++ b/src/app/theme/components/baSidebar/baSidebar.scss
@@ -8,7 +8,7 @@ $angle-right: "\f101";
   width: $sidebar-width;
   top: $top-height;
   left: 0;
-  z-index: 904;
+  z-index: 1001;
   display: block;
   min-height: 100%;
   background-color: $sidebar;
